--- a/GNSUsingCS.csproj
+++ b/GNSUsingCS.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="NLua" Version="1.7.3" />
     <PackageReference Include="Raylib-cs" Version="6.1.1" />
+    <PackageReference Include="TextCopy" Version="6.2.1" />
   </ItemGroup>
 
 </Project>
